[package]
name = "weburn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["raw_value"] }
dotenv = "0.15.0"
serde_nested_with = "0.2.5"
futures = "0.3.30"
serial2 = "0.2.20"
md5 = "0.7.0"
